# py-concurrent-consumer

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  start_consumer.py
consumer/: consumer.py  exceptions.py  fixture_handler.py  pool_manager.py  worker.py
consumer/common/: message.py  message_handler.py  offset_manager.py  pool_manager.py  queue.py  types.py  worker.py
consumer/concurrent/: concurrent_consumer.py
consumer/parallel/: parallel_consumer.py
producer/: producer.py
