[tool.poetry]
name = "py-concurrent-consumer"
version = "0.1.0"
description = ""
authors = ["Usernamelesss <8vd2roma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
confluent_kafka = "^1.8.2"
retry = "^0.9.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
